# modular-structure-generation

./: README.md  main.py  pyproject.toml
src/: base_class.py  interfaces.py  main.py
src/core/: cli.py  generator_factory.py
src/core/commands/: init.py  list_templates.py
src/core/generator/: base_generator.py  generator_factory.py  interface_file_generator.py  project_initializer.py
src/core/implements/: application_layer_generator.py  cli_user_input.py  domain_layer_generator.py  infrastructure_layer_generator.py
src/core/inputs/: cli_user_input.py  interface_user_input.py
src/core/interfaces/: base_class.py  init_command_base.py  main.py
src/core/orchestrator/: module_generator.py
src/core/services/: checker.py  template_manager.py  validators.py
src/implements/: application_layer_generator.py  cli_user_input.py  domain_layer_generator.py  infrastructure_layer_generator.py
src/orchestrator/: module_generator.py
src/plugins/python_django/: __init__.py  django_application_generator.py  django_domain_generator.py  django_infrastructure_generator.py
src/plugins/python_django/project_root/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  gunicorn_config.py  manage.py  pyproject.toml
src/plugins/python_django/project_root/src/shared/domain/: __init__.py  aggregate_root.py
src/plugins/python_django/project_root/src/shared/domain/commands/: command.py  command_bus.py  command_handler.py  command_not_registered_error.py
src/plugins/python_django/project_root/src/shared/domain/events/: domain_event.py  domain_event_subscriber.py  event_bus.py
src/plugins/python_django/project_root/src/shared/domain/exceptions/: domain_exception.py
src/plugins/python_django/project_root/src/shared/domain/queries/: query.py  query_bus.py  query_handler.py  query_not_registered_error.py  response.py
src/plugins/python_django/project_root/src/shared/domain/value_objects/: date_value_object.py  enum_value_object.py  invalid_argument_error.py  number_value_object.py  string_value_object.py  uuid.py  uuid_value_object.py  value_object.py
src/plugins/python_django/project_root/src/shared/infrastructure/api/: api_response.py
src/plugins/python_django/project_root/src/shared/infrastructure/api/exceptions/: bad_request_exception.py  exception_handler.py  exceptions.py  forbidden_exception.py  internal_server_error_exception.py  method_not_allowed_exception.py  not_acceptable_exception.py  not_found_exception.py  request_timeout_exception.py  unauthorized_exception.py  unprocessable_entity_exception.py
src/plugins/python_django/project_root/src/shared/infrastructure/api/views/: base_api_view.py  commad_api_view.py  create_api_view.py  delete_api_view.py  list_api_view.py  query_api_view.py  retrieve_api_view.py  update_api_view.py
src/plugins/python_django/project_root/src/shared/infrastructure/command_bus/: command_handlers.py  in_memory_command_bus.py
src/plugins/python_django/project_root/src/shared/infrastructure/event_bus/: domain_event_subscribers.py  in_memory_async_event_bus.py
src/plugins/python_django/project_root/src/shared/infrastructure/persistences/: base_models.py
src/plugins/python_django/project_root/src/shared/infrastructure/query_bus/: in_memory_query_bus.py  query_handlers.py
src/plugins/python_django/project_root/tests/: conftest.py
src/plugins/python_django/project_root/tests/shared/domain/commands/: test_command_not_registered_error.py
src/plugins/python_django/project_root/tests/shared/domain/exceptions/: test_domain_exception.py
src/plugins/python_django/project_root/tests/shared/domain/value_objects/: test_date_value_object.py  test_enum_value_object.py  test_number_value_object.py  test_string_value_object.py  test_uuid_value_object.py
src/plugins/python_django/project_root/tests/shared/infrastructure/api/exceptions/: test_api_exceptions.py  test_api_exceptions_specific.py
src/plugins/python_django/project_root/tests/shared/infrastructure/api/views/: test_base_api_view.py  test_command_api_view.py  test_create_api_view.py  test_delete_api_view.py  test_list_api_view.py  test_query_api_view.py  test_retrieve_api_view.py  test_update_api_view.py
src/plugins/python_django/project_root/tests/shared/infrastructure/command_bus/: test_command_handlers.py  test_in_memory_command_bus.py
src/plugins/python_django/project_root/tests/shared/infrastructure/event_bus/: test_domain_event_subscribers.py  test_in_memory_async_event_bus.py
src/plugins/python_django/project_root/tests/shared/infrastructure/query_bus/: test_in_memory_query_bus.py  test_query_handlers.py
src/plugins/python_django/project_root/{{ project_name }}/: asgi.py  settings.py  urls.py  wsgi.py
(+144 files in other folders)
