[project]
name = "modular-structure-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=7.4.0",
]

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.format]
indent-style = "space"
indent-width = 2