[project]
name = "modular-structure-generation"
version = "0.1.0"
description = "Comando CLI para Generación de Estructura Modular"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  {name = "Erick Perez", email = "erickjpl@gmail.com"},
]
maintainers = [
  {name = "Erick Perez", email = "erickjpl@gmail.com"}
]
keywords = ["SOLID", "Clean Code", "Escalabilidad", "Extensibilidad", "Mantenibilidad", "Consistencia"]
license = "MIT"
dependencies = [
  "jinja2>=3.1.6",
  "ruff>=0.12.0",
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.flake8]
max-line-length = 120
indent-size = 2
# Si quieres ignorar algunas advertencias (ej: 'W503' para el salto de línea antes de operador binario)
# ignore = ["W503", "E203"]
exclude = [".git", "__pycache__", "build", "dist", "venv"]
select = ["E", "F", "W", "C90", "N8"]
ignore = "E111"

[project.optional-dependencies]
dev = [
  "ruff>=0.3.0",
  "pytest>=7.4.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
extend-include = ["*.ipynb"]
line-length = 120
indent-width = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 20
line-ending = "lf"
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
extend-safe-fixes = ["F601"]
extend-unsafe-fixes = ["UP034"]

[tool.ruff.lint.flake8-annotations]
